[project]
name = "pyghm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aaronsaikovski", email = "asaikovski@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bandit==1.8.3",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "deprecated==1.2.18",
    "dotenv==0.9.9",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "isort==6.0.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mypy==1.16.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pbr==6.1.1",
    "pluggy==1.6.0",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pygithub==2.6.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "pytest==8.4.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "ruff==0.11.13",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "stevedore==5.4.1",
    "structlog==25.4.0",
    "types-aiofiles==24.1.0.20250606",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools]
packages = ["pyghm"]
package-dir = {"" = "src"}
include-package-data = true

[project.scripts]
pyghm = "pyghm.cli:cli"

[tool.pip-tools]
generate-hashes = true
